--- a/src/styles/Votaciones.css
+++ b/src/styles/Votaciones.css
@@ -28,6 +28,7 @@
   font-size: 1.1rem;
   margin-bottom: 10px;
   color: #eee !important;
+  white-space: pre-line;
 }
 
 .votaciones-option {
@@ -131,6 +132,18 @@
   border-radius: 12px;
 }
 
+.video-container {
+  margin: 15px 0;
+  text-align: center;
+}
+
+.votaciones-video {
+  width: 100%;
+  max-width: 1000px;
+  height: 500px;
+  border-radius: 12px;
+}
+
 /* ---- RESPONSIVE ---- */
 
 @media (max-width: 992px) {
@@ -165,6 +178,10 @@
 
   .votaciones-text {
     font-size: 1rem;
+  }
+
+  .votaciones-video {
+    height: 300px;
   }
 }
 
